@@ -1,9 +1,11 @@
 package org.nrg.containers.jms;
 
 import lombok.extern.slf4j.Slf4j;
+import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
+import org.mockito.MockedStatic;
 import org.mockito.Mockito;
 import org.nrg.containers.config.IntegrationTestConfig;
 import org.nrg.containers.config.JmsConfig;
@@ -14,6 +16,7 @@ import org.nrg.containers.services.ContainerService;
 import org.nrg.containers.utils.TestingUtils;
 import org.nrg.mail.services.MailService;
 import org.nrg.xdat.entities.AliasToken;
+import org.nrg.xdat.preferences.NotificationsPreferences;
 import org.nrg.xdat.preferences.SiteConfigPreferences;
 import org.nrg.xdat.security.helpers.Users;
 import org.nrg.xdat.security.services.PermissionsServiceI;
@@ -22,7 +25,6 @@ import org.nrg.xdat.services.AliasTokenService;
 import org.nrg.xft.ItemI;
 import org.nrg.xft.XFTItem;
 import org.nrg.xft.event.EventDetails;
-import org.nrg.xft.event.EventMetaI;
 import org.nrg.xft.event.persist.PersistentWorkflowI;
 import org.nrg.xft.event.persist.PersistentWorkflowUtils;
 import org.nrg.xft.schema.XFTManager;
@@ -30,11 +32,6 @@ import org.nrg.xft.security.UserI;
 import org.nrg.xnat.helpers.uri.UriParserUtils;
 import org.nrg.xnat.services.archive.CatalogService;
 import org.nrg.xnat.utils.WorkflowUtils;
-import org.powermock.api.mockito.PowerMockito;
-import org.powermock.core.classloader.annotations.PowerMockIgnore;
-import org.powermock.core.classloader.annotations.PrepareForTest;
-import org.powermock.modules.junit4.PowerMockRunner;
-import org.powermock.modules.junit4.PowerMockRunnerDelegate;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.test.annotation.DirtiesContext;
 import org.springframework.test.context.ContextConfiguration;
@@ -43,24 +40,25 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.Collections;
 
-import static org.mockito.Matchers.any;
-import static org.mockito.Matchers.contains;
-import static org.mockito.Matchers.eq;
-import static org.mockito.Matchers.isNull;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.contains;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.mockStatic;
 import static org.mockito.Mockito.timeout;
 import static org.mockito.Mockito.when;
-import static org.powermock.api.mockito.PowerMockito.mockStatic;
 
 @Slf4j
-@RunWith(PowerMockRunner.class)
-@PowerMockRunnerDelegate(SpringJUnit4ClassRunner.class)
-@PrepareForTest({UriParserUtils.class, XFTManager.class, Users.class, WorkflowUtils.class,
-        PersistentWorkflowUtils.class})
-@PowerMockIgnore({"org.apache.*", "java.*", "javax.*", "org.w3c.*", "com.sun.*"})
+@RunWith(SpringJUnit4ClassRunner.class)
 @ContextConfiguration(classes = {JmsConfig.class, IntegrationTestConfig.class})
 @Transactional
 public class JmsConsumerExceptionTest {
+    private MockedStatic<WorkflowUtils> mockedWorkflowUtils;
+    private MockedStatic<Users> mockedUsers;
+    private MockedStatic<XFTManager> mockedXFTManager;
+    private MockedStatic<UriParserUtils> mockedUriParserUtils;
+    private MockedStatic<PersistentWorkflowUtils> mockedPersistentWorkflowUtils;
+
     @Autowired private SiteConfigPreferences mockSiteConfigPreferences;
     @Autowired private UserManagementServiceI mockUserManagementServiceI;
     @Autowired private PermissionsServiceI mockPermissionsServiceI;
@@ -69,6 +67,7 @@ public class JmsConsumerExceptionTest {
     @Autowired private ContainerService containerService;
     @Autowired private MailService mockMailService;
     @Autowired private AliasTokenService mockAliasTokenService;
+    @Autowired private NotificationsPreferences mockNotificationsPreferences;
 
     private UserI mockUser;
     private FakeWorkflow fakeWorkflow;
@@ -83,17 +82,28 @@ public class JmsConsumerExceptionTest {
     public void setup() throws Exception {
         fakeWorkflow = new FakeWorkflow();
 
+        mockedWorkflowUtils = Mockito.mockStatic(WorkflowUtils.class);
+        mockedUsers = mockStatic(Users.class);
+        mockedXFTManager = Mockito.mockStatic(XFTManager.class);
+        mockedUriParserUtils = Mockito.mockStatic(UriParserUtils.class);
+        mockedPersistentWorkflowUtils = Mockito.mockStatic(PersistentWorkflowUtils.class);
+
         mockUser = mock(UserI.class);
         when(mockUser.getLogin()).thenReturn(FAKE_USER);
         when(mockUser.getEmail()).thenReturn(FAKE_EMAIL);
-        mockStatic(Users.class);
-        when(Users.getUser(FAKE_USER)).thenReturn(mockUser);
+
+//        mockStatic(Users.class);
+//        when(Users.getUser(FAKE_USER)).thenReturn(mockUser);
+        mockedUsers.when(() -> Users.getUser(FAKE_USER)).thenReturn(mockUser);
 
         // Mock the site config preferences
         when(mockSiteConfigPreferences.getProperty("processingUrl", FAKE_HOST)).thenReturn(FAKE_HOST);
         when(mockSiteConfigPreferences.getSiteUrl()).thenReturn(FAKE_HOST);
         when(mockSiteConfigPreferences.getSiteId()).thenReturn(FAKE_SITEID);
         when(mockSiteConfigPreferences.getAdminEmail()).thenReturn(FAKE_EMAIL);
+
+        // Mock notifications preferences to allow JMS error notifications
+        when(mockNotificationsPreferences.getSuppressJMSFailureNotifications()).thenReturn(false);
 
         // Permissions
         when(mockPermissionsServiceI.canEdit(any(UserI.class), any(ItemI.class))).thenReturn(Boolean.TRUE);
@@ -107,22 +117,29 @@ public class JmsConsumerExceptionTest {
         mockAliasToken.setSecret("secret");
         when(mockAliasTokenService.issueTokenForUser(mockUser)).thenReturn(mockAliasToken);
 
-        // Mock UriParserUtils using PowerMock. This allows us to mock out
-        // the responses to its static method parseURI().
-        PowerMockito.mockStatic(UriParserUtils.class);
-
         // Use powermock to mock out the static method XFTManager.isInitialized()
-        PowerMockito.mockStatic(XFTManager.class);
-        when(XFTManager.isInitialized()).thenReturn(true);
+//        PowerMockito.mockStatic(XFTManager.class);
+//        when(XFTManager.isInitialized()).thenReturn(true);
+        mockedXFTManager.when(XFTManager::isInitialized).thenReturn(true);
 
         // Also mock out workflow operations to return our fake workflow object
-        PowerMockito.mockStatic(WorkflowUtils.class);
-        when(WorkflowUtils.getUniqueWorkflow(mockUser, fakeWorkflow.getWorkflowId().toString()))
+//        PowerMockito.mockStatic(WorkflowUtils.class);
+//        when(WorkflowUtils.getUniqueWorkflow(mockUser, fakeWorkflow.getWorkflowId().toString()))
+        mockedWorkflowUtils.when(() -> WorkflowUtils.getUniqueWorkflow(mockUser, fakeWorkflow.getWorkflowId().toString()))
                 .thenReturn(fakeWorkflow);
-        PowerMockito.doNothing().when(WorkflowUtils.class, "save", any(PersistentWorkflowI.class), isNull(EventMetaI.class));
-        PowerMockito.spy(PersistentWorkflowUtils.class);
-        PowerMockito.doReturn(fakeWorkflow).when(PersistentWorkflowUtils.class, "getOrCreateWorkflowData", eq(FakeWorkflow.defaultEventId),
-                eq(mockUser), any(XFTItem.class), any(EventDetails.class));
+
+//        PowerMockito.doNothing().when(WorkflowUtils.class, "save", any(PersistentWorkflowI.class), isNull(EventMetaI.class));
+        mockedWorkflowUtils.when(() -> WorkflowUtils.save(Mockito.<PersistentWorkflowI>any(), Mockito.isNull())).thenAnswer(invocation -> null);
+
+//        PowerMockito.spy(PersistentWorkflowUtils.class);
+//        PowerMockito.doReturn(fakeWorkflow).when(PersistentWorkflowUtils.class, "getOrCreateWorkflowData", eq(FakeWorkflow.defaultEventId),
+//                eq(mockUser), any(XFTItem.class), any(EventDetails.class));
+        mockedPersistentWorkflowUtils.when(() -> PersistentWorkflowUtils.getOrCreateWorkflowData(
+                eq(FakeWorkflow.defaultEventId), eq(mockUser), any(XFTItem.class), any(EventDetails.class)))
+                .thenReturn(fakeWorkflow);
+
+        PersistentWorkflowUtils.getOrCreateWorkflowData(
+                FakeWorkflow.defaultEventId, mockUser, Mockito.mock(XFTItem.class), Mockito.mock(EventDetails.class));
 
         // mock external FS check
         when(mockCatalogService.hasRemoteFiles(eq(mockUser), any(String.class))).thenReturn(false);
@@ -137,11 +154,19 @@ public class JmsConsumerExceptionTest {
                         .name("placeholder")
                         .build())
                 .build());
-        wrapper = command.xnatCommandWrappers().get(0);
+        wrapper = command.xnatCommandWrappers().getFirst();
         TestingUtils.commitTransaction();
 
         fakeWorkflow.setId(FAKE_ID);
         fakeWorkflow.setPipelineName(wrapper.name());
+    }
+
+    @After
+    public void tearDownStaticMocks() {
+        mockedUriParserUtils.closeOnDemand();
+        mockedXFTManager.closeOnDemand();
+        mockedUsers.closeOnDemand();
+        mockedWorkflowUtils.closeOnDemand();
     }
 
 
@@ -149,15 +174,24 @@ public class JmsConsumerExceptionTest {
     @DirtiesContext
     //CS-1031
     public void testStagingConsumeFailure() throws Exception {
-        // setup jmsTemplate to throw exception
+        // Setup: Make userManagementServiceI throw a RuntimeException that won't be caught by the listener
+        // This will propagate to the JMS error handler, unlike exceptions thrown from within
+        // consumeResolveCommandAndLaunchContainer which are caught internally
         String exceptionMsg = "my tricky exception message";
-        PowerMockito.when(WorkflowUtils.getUniqueWorkflow(mockUser, fakeWorkflow.getWorkflowId().toString()))
+
+        // Reset the user management mock to throw an uncaught exception
+        Mockito.reset(mockUserManagementServiceI);
+        when(mockUserManagementServiceI.getUser(FAKE_USER))
                 .thenThrow(new RuntimeException(exceptionMsg));
 
-        containerService.queueResolveCommandAndLaunchContainer(null, wrapper.id(), 0L, wrapper.name(), Collections.<String, String>emptyMap(), mockUser, fakeWorkflow
-        );
+        containerService.queueResolveCommandAndLaunchContainer(null, wrapper.id(), 0L, wrapper.name(),
+                Collections.<String, String>emptyMap(), mockUser, fakeWorkflow);
 
-        Mockito.verify(mockMailService, timeout(500).times(1)).sendHtmlMessage(eq(FAKE_EMAIL),
-                eq(FAKE_EMAIL), eq(FAKE_SITEID + " JMS Error"), contains(exceptionMsg));
+        // Verify that the error handler sends an email notification
+        Mockito.verify(mockMailService, timeout(5000).times(1)).sendHtmlMessage(
+                eq(FAKE_EMAIL),
+                eq(FAKE_EMAIL),
+                eq(FAKE_SITEID + " JMS Error"),
+                contains(exceptionMsg));
     }
 }
